試合結果登録編集一覧画面レイアウト調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -87,3 +87,9 @@ main {
 .admins_graduate_edit {
   width: 620px;
 }
+
+.admins_game_result_new,
+.admins_game_result_edit,
+.admins_graduate {
+  width: 620px;
+}
