お知らせ登録編集一覧画面レイアウト調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -93,3 +93,15 @@ main {
 .admins_graduate {
   width: 620px;
 }
+
+.admins_information_new,
+.admins_information_edit,
+.admins_information {
+  width: 620px;
+}
+
+.admins_information_for_guardian_new,
+.admins_information_for_guardian_edit,
+.admins_information_for_guardian {
+  width: 620px;
+}
