お問い合わせ詳細、注文一覧詳細画面レイアウト調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -110,3 +110,12 @@ main {
 .admins_item_edit {
  width: 620px;
 }
+
+
+.admins_contact {
+  width: 620px;
+}
+
+.admins_order {
+  width: 620px; 
+}
