--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,10 +27,23 @@ body {
     "Hiragino Sans",
     Meiryo,
     sans-serif;
+  background-color: #d8dbd9;
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 600px;
+  box-sizing: border-box;
+}
+
+footer {
+  width: 100%;
+  height: 500px;
+  position: absolute; /*←親要素に対して、絶対位置を決める*/
+  bottom: 0; /*ページの下端からの距離が0の位置*/
+  background-color: #fd7e00;
 }
 
  header {
-   background-color: #fd7e00;
+   background-color: #f0821e;
  }
 
 header img {
@@ -38,22 +51,6 @@ header img {
   height: auto;
 }
 
-main {
-    min-height: 100vh;
-    position: relative;/*←相対位置*/
-}
-
-/*フッターのレイアウト*/
-.footer-main {
-  psition: absolute; /*絶対位置*/
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: auto;
-  background-color: #fd7e00;
-}
-
-/*aboutページレイアウト*/
 
 /*container幅を固定*/
 .about-main {
@@ -117,5 +114,11 @@ main {
 }
 
 .admins_order {
-  width: 620px; 
+  width: 620px;
+}
+
+
+.btn, .btn:hover {
+  background-color: #193278;
+  color: #FFF;
 }
