--- a/app/views/admins/homes/top.html.erb
+++ b/app/views/admins/homes/top.html.erb
@@ -1,1 +1,51 @@
-TOPページ
+<section class="container">
+  <div class="row mt-3 mb-3">
+    <h2 class="font-weight-bold">管理者MENU</h2>
+  </div>
+  <div class="row">
+    <div class="menu_box">
+      <%= link_to "カテゴリー管理", admins_categories_path, class: "top_link" %>
+      <p class="mt-2">選手・スタッフの登録で使用するカテゴリを設定します。</p>
+    </div>
+    <div class="menu_box">
+      <%= link_to "選手・スタッフ管理", admins_members_path, class: "top_link" %>
+      <p class="mt-2">選手・スタッフを登録管理します。</p>
+    </div>
+    <div class="menu_box">
+      <%= link_to "OB紹介管理", admins_graduates_path, class: "top_link" %>
+      <p class="mt-2">卒業生の情報を登録管理します。</p>
+    </div>
+    <div class="menu_box">
+      <%= link_to "スケジュール管理", admins_events_path, class: "top_link" %>
+      <p class="mt-2">スケジュールを登録管理します。</p>
+    </div>
+    <div class="menu_box">
+      <%= link_to "試合結果管理", admins_game_results_path, class: "top_link" %>
+      <p class="mt-2">試合結果を登録管理します。</p>
+    </div>
+    <div class="menu_box">
+      <%= link_to "お知らせ管理", admins_informations_path, class: "top_link" %>
+      <p class="mt-2">お知らせを登録管理します。</p>
+    </div>
+    <div class="menu_box">
+      <%= link_to "保護者専用お知らせ管理", admins_information_for_guardians_path, class: "top_link" %>
+      <p class="mt-2">保護者用のお知らせを登録管理します。</p>
+    </div>
+    <div class="menu_box">
+      <%= link_to "保護者管理", admins_guardians_path, class: "top_link" %>
+      <p class="mt-2">登録された保護者の情報を管理します。</p>
+    </div>
+    <div class="menu_box">
+      <%= link_to "応援グッズ管理", admins_items_path, class: "top_link" %>
+      <p class="mt-2">販売する応援グッズを登録管理します。</p>
+    </div>
+    <div class="menu_box">
+      <%= link_to "注文内容管理", admins_orders_path, class: "top_link" %>
+      <p class="mt-2">登録された注文内容を管理します。</p>
+    </div>
+    <div class="menu_box">
+      <%= link_to "お問い合わせ管理", admins_contacts_path, class: "top_link" %>
+      <p class="mt-2">お問い合わせ内容の情報を管理します。</p>
+    </div>
+  </div>
+</section>
