--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,12 @@
     <!--サブコンポーネント-->
     <div class="container">
       <!--ブランド-->
-      <a href="/", class="pr-5"><img src="/assets/logo.png" alt="青山高校サッカー部"></a>
+      <% if admin_signed_in? %>
+        <a href="/admins", class="pr-5"><img src="/assets/logo.png" alt="青山高校サッカー部"></a>
+        <span>管理者でログイン中</span>
+      <% else%>
+        <a href="/", class="pr-5"><img src="/assets/logo.png" alt="青山高校サッカー部"></a>
+      <% end %>
 
       <!--切り替えボタン-->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,40 +33,7 @@
       <div class="collapse navbar-collapse" id="navbar-content">
         <ul class="row navbar-nav mr-auto">
           <% if admin_signed_in? %>
-            <li class="col-sm-3 nav-item">
-              <%= link_to "カテゴリー登録", admins_categories_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="col-sm-3 nav-item">
-              <%= link_to "選手・スタッフ管理", admins_members_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="col-sm-3 nav-item">
-              <%= link_to "OB紹介管理", admins_graduates_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="col-sm-3 nav-item">
-              <%= link_to "スケジュール管理", admins_events_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="col-sm-3 nav-item">
-              <%= link_to "試合結果管理", admins_game_results_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="col-sm-3  nav-item">
-              <%= link_to "お知らせ管理", admins_informations_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="col-sm-3 nav-item">
-              <%= link_to "保護者専用お知らせ管理", admins_information_for_guardians_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="col-sm-3 nav-item">
-              <%= link_to "保護者管理", admins_guardians_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="col-sm-3 nav-item">
-              <%= link_to "応援グッズ登録", admins_items_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="col-sm-3 nav-item">
-              <%= link_to "注文管理", admins_orders_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="col-sm-3 nav-item">
-              <%= link_to "お問い合わせ管理", admins_contacts_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="col-sm-3 nav-item">
+            <li class="col justify-content-end">
               <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
             </li>
           <% else%>
@@ -99,5 +71,42 @@
 
   <body>
     <%= yield %>
+    <footer>
+      <div class="footer-main container-fluid pt-3 mt-5">
+        <div class="container">
+          <div class="row justify-content-around align-items-center">
+            <div class="footer-logo">
+              <img src="/assets/footerlogo.png" alt="青山高校サッカー部"></a>
+            </div>
+            <div class="footer-info">
+              <p>
+                学校法人 青山学院<br>
+                青山高等学校 サッカー部<br>
+                〒000-0000<br>
+                　青森県青森市青山１丁目１１番地５丁目<br>
+                TEL:0100-0000-0000<br>
+                FAX:0200-0000-0000<br>
+              </p>
+            </div>
+            <div class="col-3 embed-responsive embed-responsive-16by9">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7239.032838021456!2d140.88535933004871!3d38.2603930643534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f8a28180c510b87%3A0xb2a30b91be1ffdbc!2z5LuZ5Y-w6aeF!5e0!3m2!1sja!2sjp!4v1640513829852!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+
+            <div class="footer-social">
+              <a href="/"><i class="fab fa-facebook-square fa-3x text-dark m-3"></i></a>
+              <a href="/"><i class="fab fa-twitter-square fa-3x text-dark m-3"></i></a>
+              <a href="/"><i class="fab fa-instagram fa-3x text-dark m-3"></i></a>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="row justify-content-around mt-3">
+          <p>CopyRight 2021 denozo</p>
+        </div>
+      </div>
+    </footer>
   </body>
+
+
 </html>
