--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@ body {
     "Hiragino Sans",
     Meiryo,
     sans-serif;
-  background-color: #d8dbd9;
+  background-color: #eff2f8;
   min-height: 100vh;
   position: relative;
   padding-bottom: 600px;
@@ -36,20 +36,16 @@ body {
 
 footer {
   width: 100%;
-  height: 500px;
+  height: 400px;
   position: absolute; /*←親要素に対して、絶対位置を決める*/
   bottom: 0; /*ページの下端からの距離が0の位置*/
-  background-color: #fd7e00;
+  background-color: #3e3e3e;
+  color: #fff;
 }
 
  header {
    background-color: #f0821e;
  }
-
-header img {
-  width: 200px;
-  height: auto;
-}
 
 
 /*container幅を固定*/
