--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,36 +72,41 @@
   <body>
     <%= yield %>
     <footer>
-      <div class="footer-main container-fluid pt-3 mt-5">
-        <div class="container">
-          <div class="row justify-content-around align-items-center">
-            <div class="footer-logo">
-              <img src="/assets/footerlogo.png" alt="青山高校サッカー部"></a>
-            </div>
-            <div class="footer-info">
-              <p>
-                学校法人 青山学院<br>
-                青山高等学校 サッカー部<br>
-                〒000-0000<br>
-                　青森県青森市青山１丁目１１番地５丁目<br>
-                TEL:0100-0000-0000<br>
-                FAX:0200-0000-0000<br>
-              </p>
-            </div>
-            <div class="col-3 embed-responsive embed-responsive-16by9">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7239.032838021456!2d140.88535933004871!3d38.2603930643534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f8a28180c510b87%3A0xb2a30b91be1ffdbc!2z5LuZ5Y-w6aeF!5e0!3m2!1sja!2sjp!4v1640513829852!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-
-            <div class="footer-social">
-              <a href="/"><i class="fab fa-facebook-square fa-3x text-dark m-3"></i></a>
-              <a href="/"><i class="fab fa-twitter-square fa-3x text-dark m-3"></i></a>
-              <a href="/"><i class="fab fa-instagram fa-3x text-dark m-3"></i></a>
-            </div>
-
+      <div class="container-fliud">
+        <!--フッターコンテンツ-->
+        <div class="row mt-4">
+          <!--チームエンブレム-->
+          <div class="col-md-2">
+            <img src="/assets/footerlogo.png" alt="青山高校サッカー部" width="70%" height="70%"></a>
+          </div>
+          <!--所在地-->
+          <div class="col-md-3">
+            <p>
+              学校法人 青山学院<br>
+              青山高等学校 サッカー部<br>
+              〒000-0000<br>
+              　青森県青森市青山１丁目１１番地５丁目<br>
+              TEL:0100-0000-0000<br>
+              FAX:0200-0000-0000<br>
+            </p>
+          </div>
+          <!--地図表示-->
+          <div class="col-md-3 embed-responsive embed-responsive-16by9">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7239.032838021456!2d140.88535933004871!3d38.2603930643534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f8a28180c510b87%3A0xb2a30b91be1ffdbc!2z5LuZ5Y-w6aeF!5e0!3m2!1sja!2sjp!4v1640513829852!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          </div>
+          <!--ソーシャルリンク-->
+          <div class="col-md-2">
+            <a href="/"><i class="fab fa-facebook-square fa-3x text-light m-3"></i></a>
+            <a href="/"><i class="fab fa-twitter-square fa-3x text-light m-3"></i></a>
+            <a href="/"><i class="fab fa-instagram fa-3x text-light m-3"></i></a>
+          </div>
+          <!--お問い合わせリンク-->
+          <div class="col-md-2">
+            <%= link_to "お問い合わせ", new_contact_path, class: 'btn bg-light text-dark' %>
           </div>
         </div>
-
-        <div class="row justify-content-around mt-3">
+        <!--Copyright-->
+        <div class="row justify-content-center pt-5">
           <p>CopyRight 2021 denozo</p>
         </div>
       </div>
